--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=CoolGlasses
-## spring.data.mongodb.uri=mongodb://mongo:rWHKDMyBqDIExTACeemcOYBuvrcysdAI@monorail.proxy.rlwy.net:45456/LentesBD?authSource=admin
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/LentesBD
+spring.data.mongodb.uri=mongodb://mongo:rWHKDMyBqDIExTACeemcOYBuvrcysdAI@monorail.proxy.rlwy.net:45456/LentesBD?authSource=admin
+##spring.data.mongodb.uri=mongodb://127.0.0.1:27017/LentesBD
